# openairinterface5g

./: .gitignore
ci-scripts/xml_files/: enb_usrpb210_band40.xml
cmake_targets/: CMakeLists.txt  build_oai
cmake_targets/mexfiles/: CMakeLists.txt
cmake_targets/mexfiles/src/: CMakeLists.txt
cmake_targets/mexfiles/src/cmake/: FindMatlab.cmake
cmake_targets/mexfiles/src/mex/: CMakeLists.txt
cmake_targets/mexfiles/src/mex/mexOAI/: CMakeLists.txt  DlschChannelCompensation.m  DlschChannelCompensation_TM56.m  DlschChannelLevel.m  DlschChannelLevelPrec_TM56.m  DlschDecoding.m  DlschDecodingInit.m  DlschDetectionMrc.m  DlschDualStreamCorrelation.m  DlschEncoding.m  DlschIALLR.m  DlschSISOLLR.m  GetTbs.m  Log2Approx.m  SetTausSeed.m  Taus.m  layer_demapping.m  mexDlschChannelCompensation.c  mexDlschChannelCompensation_TM56.c  mexDlschChannelLevel.c  mexDlschChannelLevelPrec_TM56.c  mexDlschDecoding.c  mexDlschDecodingInit.c  mexDlschDetectionMrc.c  mexDlschDetectionMrc_4ant.c  mexDlschDualStreamCorrelation.c  mexDlschEncoding.c  mexDlschIALLR.c  mexDlschSISOLLR.c  mexGetTbs.c  mexLog2Approx.c  mexOAI.c  mexSetTausSeed.c  mexTaus.c
nfapi/open-nFAPI/nfapi/public_inc/: nfapi_nr_interface.h
openair1/MATLAB_Simulator/TCL_MOBILE/: InitSimparms_SU_MIMO4x4.m  ZF_conv.m  ZF_conv_v1.m
openair1/MATLAB_Simulator/TM5/: InitSimparms.m  tm5.m
openair1/PHY/: defs.h  defs_eNB.h  defs_gNB.h  defs_nr_UE.h  defs_nr_common.h  extern.h
openair1/PHY/CODING/: 3gpplte_turbo_decoder_avx2_16bit.c  coding_defs.h
openair1/PHY/CODING/TESTBENCH/: polartest.c
openair1/PHY/CODING/nrPolar_tools/: nr_polar_defs.h  nr_polar_encoder.c  nr_polar_matrix_and_array.c
openair1/PHY/INIT/: lte_param_init.c  nr_init.c  nr_init_ue.c
openair1/PHY/LTE_ESTIMATION/: lte_adjust_sync.c  lte_eNB_measurements.c
openair1/PHY/LTE_REFSIG/: gen_mod_table.m  mod_table.mat
openair1/PHY/LTE_TRANSPORT/: dci.c  dci_tools.c  defs.h  dlsch_coding.c  dlsch_decoding.c  dlsch_demodulation.c  dlsch_llr_computation.c  dlsch_modulation.c  dlsch_scrambling.c  if4_tools.c  if5_tools.c  lte_mcs.c  pmch.c  prach.c  proto.h  rar_tools.c
openair1/PHY/MODULATION/: nr_slot_fep.c  slot_fep.c
openair1/PHY/NR_REFSIG/: mod_table.mat  nr_dmrs_rx.c  nr_gen_mod_table.m  nr_gold.c  nr_mod_table.h  nr_refsig.h
openair1/PHY/NR_TRANSPORT/: nr_pbch.c
openair1/PHY/NR_UE_TRANSPORT/: dci_tools_nr.c  nr_initial_sync.c  nr_pbch.c
openair1/SCHED/: phy_procedures_lte_eNb.c  phy_procedures_lte_ue.c
openair1/SCHED_NR/: phy_procedures_nr_gNB.c
openair1/SCHED_NR_UE/: phy_procedures_nr_ue.c  pucch_uci_ue_nr.c
openair1/SIMULATION/LTE_PHY/: unitary_defs.h
openair2/COMMON/: rrc_messages_types.h
openair2/GNB_APP/: gnb_config.c  gnb_paramdef.h
openair2/LAYER2/MAC/: eNB_scheduler.c
openair2/RRC/NR/: nr_rrc_config.c  rrc_gNB.c
openair2/UTIL/LOG/: log.c  log.h  vcd_signal_dumper.c  vcd_signal_dumper.h
targets/ARCH/tcp_bridge/: tcp_bridge.c
targets/PROJECTS/GENERIC-LTE-EPC/CONF/: gnb.band78.tm1.106PRB.usrpx300.conf
targets/RT/USER/: nr-softmodem.c  nr-ue.c  nr-uesoftmodem.c
