add_subdirectory(mexOAI)
add_subdirectory(mexAdd)
add_subdirectory(mexGetTbs)
add_subdirectory(mexTaus)
add_subdirectory(mexSetTausSeed)
add_subdirectory(mexDlschDecodingInit)
add_subdirectory(mexDlschEncoding)
add_subdirectory(mexDlschChannelLevelPrec_TM56)
add_subdirectory(mexLog2Approx)
add_subdirectory(mexDlschChannelCompensation_TM56)
add_subdirectory(mexDlschDualStreamCorrelation)
add_subdirectory(mexDlschDetectionMrc)
add_subdirectory(mexDlschIALLR)
